--- a/app/brands.html
+++ b/app/brands.html
@@ -20,7 +20,7 @@
                             <a class="menu__link" href="index.html">Главная </a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Поломки</a>
+                            <a class="menu__link" href="#breaking">Поломки</a>
                         </li>
                         <li class="menu__item">
                             <a class="menu__link" href="#">Бренды</a>
@@ -35,91 +35,21 @@
                 </nav>
                 <a class="menu__phone" href="tel:+79528119728">+7 (952) 811-97-28</a>
             </div>
+
         </div>
     </header>
     <main>
-        <section class="breaking-page">
-            <div class="container">
-                <div class="breaking-page__inner">
-                    <div class="breaking-page__image-inner">
-                        <img class="breaking-page__image" alt="" src="images/breaking-page/sound.jpg">
-                    </div>
-                    <div class="breaking-page__box">
-                        <div class="breaking-page__title">Ремонт динамиков в телефоне</div>
-                        <div class="breaking-page__headline">Сервисный центр "Доктор Гаджет"</div>
 
-                        <div class="breaking-page__box-inner">
-                            <div class="breaking-page__box-columns">
-                                <p class="breaking-page__subtitle">Стоимость:</p>
-                                <p class="breaking-page__price">От 1000р</p>
-                                <p class="breaking-page__subtitle">Время работы:</p>
-                                <p class="breaking-page__time">От 30 мин</p>
-                                <a class="breaking-page__link" href="#">Оставить заявку</a>
-                            </div>
-                            <div class="breaking-page__box-columns">
-                                <p class="breaking-page__subtitle">Телефон:</p>
-                                <a class="breaking-page__phone" href="tel:+79528119728">+7 (952) 811-97-28</a>
-                                <p class="breaking-page__subtitle">Адрес:</p>
-                                <p class="breaking-page__adress">2-я Целиноградская ул., 13</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="slider-choice">
-            <div class="container-slider">
-                <h3 class="slider-choice__title title">Почему выбирают "Доктор Гаджет"</h3>
-                <div class="slider-choice__inner">
-                    <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
-                            <img class="slider-choice__item-icon" src="images/icons/time.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Качество и скорость работы</h5>
-                            <p class="slider-choice__item-text">Время ремонта в нашем сервисном центре занимает от 30 минут</p>
-                        </div>
-                    </div>
-                    <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
-                            <img class="slider-choice__item-icon" src="images/icons/dollar.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Доступная стоимость работы</h5>
-                            <p class="slider-choice__item-text">Стоимоть работ нижу конкурентов, экономим средства клиентов</p>
-                        </div>
-                    </div>
-                    <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
-                            <img class="slider-choice__item-icon" src="images/icons/setings.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Оригинальные запчасти</h5>
-                            <p class="slider-choice__item-text">Для ремонта используем оригинальные запчасти, либо аналоги</p>
-                        </div>
-                    </div>
-                    <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
-                            <img class="slider-choice__item-icon" src="images/icons/work-time.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Режим работы</h5>
-                            <p class="slider-choice__item-text">Пн-Сб: с 10 до 19 Вс: Выходной</p>
-                        </div>
-                    </div>
-                    <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
-                            <img class="slider-choice__item-icon" src="images/icons/master.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Опытные мастера</h5>
-                            <p class="slider-choice__item-text">Квалифицированные инженеры с опытом работы от 5 лет</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
         <section class="brands">
             <div class="container">
-                <h3 class="brands__title title">Ремонтируем бренды</h3>
+                <h3 class="brands__title title">Ремонт смартфонов</h3>
                 <div class="brands__inner">
                     <a class="brands__link" href="xiaomi.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/xiaomi.png" alt="">
                         </div>
                     </a>
-                    <a class="brands__link" href="iphone.html">
+                    <a class="brands__link" href="apple.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/apple.png" alt="">
                         </div>
@@ -129,12 +59,12 @@
                             <img class="brands__icon" src="images/brands/logo/huawei.png" alt="">
                         </div>
                     </a>
-                    <a class="brands__link" href="#">
+                    <a class="brands__link" href="honor.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/honor.png" alt="">
                         </div>
                     </a>
-                    <a class="brands__link" href="#">
+                    <a class="brands__link" href="meizu.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/meizu.png" alt="">
                         </div>
@@ -144,22 +74,122 @@
                             <img class="brands__icon" src="images/brands/logo/samsung.png" alt="">
                         </div>
                     </a>
-                    <a class="brands__link" href="#">
+                    <a class="brands__link" href="nokia.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/nokia.png" alt="">
                         </div>
                     </a>
-                    <a class="brands__link" href="#">
+                    <a class="brands__link" href="lenovo.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/lenovo.png" alt="">
                         </div>
                     </a>
-                    <a class="brands__link" href="#">
+                    <a class="brands__link" href="sony.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/sony.png" alt="">
                         </div>
                     </a>
-                    <a class="brands__link" href="#">
+                    <a class="brands__link" href="asus.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/asus.png" alt="">
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="container">
+                <h3 class="brands__title title">Ремонт ноутбуков</h3>
+                <div class="brands__inner">
+                    <a class="brands__link" href="xiaomi-laptop.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/xiaomi.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="macbook.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/apple.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="huawei-laptop.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/huawei.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="lenovo-laptop.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/lenovo.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="asus-laptop.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/asus.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="acer-laptop.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/acer.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="dell-laptop.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/dell.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="hp-laptop.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/hp.png" alt="">
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="container">
+                <h3 class="brands__title title">Ремонт телевизоров</h3>
+                <div class="brands__inner">
+                    <a class="brands__link" href="xiaomi.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/xiaomi.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="apple.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/apple.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="huawei.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/huawei.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="honor.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/honor.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="meizu.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/meizu.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="samsung.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/samsung.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="nokia.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/nokia.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="lenovo.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/lenovo.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="sony.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/sony.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="asus.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/asus.png" alt="">
                         </div>
@@ -167,6 +197,8 @@
                 </div>
             </div>
         </section>
+
+
 
 
         <footer class="footer">
@@ -247,6 +279,16 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="footer_copy">
+                    <p class="footer__copy-text">
+                        Представленные на сайте товарные знаки используются с правомерной информационной и описательной целью. iPhone, Macbook, iPad - правообладатель Apple Inc. (Эпл Инк.); Huawei и Honor - правообладатель HUAWEI TECHNOLOGIES CO., LTD. (ХУАВЕЙ ТЕКНОЛОДЖИС КО.,
+                        ЛТД.); Samsung – правообладатель Samsung Electronics Co. Ltd. (Самсунг Электроникс Ко., Лтд.); MEIZU - правообладатель MEIZU TECHNOLOGY CO., LTD.; Nokia - правообладатель Nokia Corporation (Нокиа Корпорейшн); Lenovo - правообладатель
+                        Lenovo (Beijing) Limited; Xiaomi - правообладатель Xiaomi Inc.; ZTE - правообладатель ZTE Corporation; HTC - правообладатель HTC CORPORATION (Эйч-Ти-Си КОРПОРЕЙШН); LG - правообладатель LG Corp. (ЭлДжи Корп.); Philips - правообладатель
+                        Koninklijke Philips N.V. (Конинклийке Филипс Н.В.); Sony - правообладатель Sony Corporation (Сони Корпорейшн); ASUS - правообладатель ASUSTeK Computer Inc. (Асустек Компьютер Инкорпорейшн); ACER - правообладатель Acer Incorporated
+                        (Эйсер Инкорпорейтед); DELL - правообладатель Dell Inc.(Делл Инк.); HP - правообладатель HP Hewlett-Packard Group LLC (ЭйчПи Хьюлетт Паккард Груп ЛЛК); Toshiba - правообладатель KABUSHIKI KAISHA TOSHIBA, also trading as Toshiba
+                        Corporation (КАБУШИКИ КАЙША ТОШИБА также торгующая как Тосиба Корпорейшн). Товарные знаки используется с целью описания товара, в отношении которых производятся услуги по ремонту.
+                    </p>
                 </div>
             </div>
         </footer>
