--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
                             <a class="menu__link" href="#breaking">Поломки</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Бренды</a>
+                            <a class="menu__link" href="brands.html">Бренды</a>
                         </li>
                         <li class="menu__item">
                             <a class="menu__link" href="#">Новости</a>
@@ -51,48 +51,8 @@
         </div>
     </header>
     <main>
-        <section class="slider-choice">
-            <div class="container">
-                <h3 class="slider-choice__title title">Почему выбирают "Доктор Гаджет"</h3>
-                <div class="slider-choice__inner">
-                    <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
-                            <img class="slider-choice__item-icon" src="images/icons/time.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Скорость работы</h5>
-                            <p class="slider-choice__item-text">Время ремонта в нашем сервисном центре занимает от 30 минут</p>
-                        </div>
-                    </div>
-                    <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
-                            <img class="slider-choice__item-icon" src="images/icons/dollar.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Стоимость работы</h5>
-                            <p class="slider-choice__item-text">Стоимоть работ нижу конкурентов, экономим средства клиентов</p>
-                        </div>
-                    </div>
-                    <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
-                            <img class="slider-choice__item-icon" src="images/icons/setings.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Оригинальные запчасти</h5>
-                            <p class="slider-choice__item-text">Для ремонта используем оригинальные запчасти, либо аналоги</p>
-                        </div>
-                    </div>
-                    <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
-                            <img class="slider-choice__item-icon" src="images/icons/work-time.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Режим работы</h5>
-                            <p class="slider-choice__item-text">Пн-Сб: с 10 до 19 Вс: Выходной</p>
-                        </div>
-                    </div>
-                    <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
-                            <img class="slider-choice__item-icon" src="images/icons/master.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Опытные мастера</h5>
-                            <p class="slider-choice__item-text">Квалифицированные инженеры с опытом работы от 5 лет</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+
+
         <section class="breaking" id="breaking">
             <div class="container">
                 <h3 class="breaking__title title">Ремонтируем поломки</h3>
@@ -302,6 +262,108 @@
                 </div>
             </div>
         </section>
+        <section class="slider-choice">
+            <div class="container">
+                <h3 class="slider-choice__title title">Почему выбирают "Доктор Гаджет"</h3>
+                <div class="slider-choice__inner">
+                    <div class="slider-choice__item ">
+                        <div class="slider-choice__item-inner">
+                            <img class="slider-choice__item-icon" src="images/icons/time.svg" alt="">
+                            <h5 class="slider-choice__item-title item__title">Скорость работы</h5>
+                            <p class="slider-choice__item-text">Время ремонта в нашем сервисном центре занимает от 30 минут</p>
+                        </div>
+                    </div>
+                    <div class="slider-choice__item ">
+                        <div class="slider-choice__item-inner">
+                            <img class="slider-choice__item-icon" src="images/icons/dollar.svg" alt="">
+                            <h5 class="slider-choice__item-title item__title">Стоимость работы</h5>
+                            <p class="slider-choice__item-text">Стоимоть работ нижу конкурентов, экономим средства клиентов</p>
+                        </div>
+                    </div>
+                    <div class="slider-choice__item ">
+                        <div class="slider-choice__item-inner">
+                            <img class="slider-choice__item-icon" src="images/icons/setings.svg" alt="">
+                            <h5 class="slider-choice__item-title item__title">Оригинальные запчасти</h5>
+                            <p class="slider-choice__item-text">Для ремонта используем оригинальные запчасти, либо аналоги</p>
+                        </div>
+                    </div>
+                    <div class="slider-choice__item ">
+                        <div class="slider-choice__item-inner">
+                            <img class="slider-choice__item-icon" src="images/icons/work-time.svg" alt="">
+                            <h5 class="slider-choice__item-title item__title">Режим работы</h5>
+                            <p class="slider-choice__item-text">Пн-Сб: с 10 до 19 Вс: Выходной</p>
+                        </div>
+                    </div>
+                    <div class="slider-choice__item ">
+                        <div class="slider-choice__item-inner">
+                            <img class="slider-choice__item-icon" src="images/icons/master.svg" alt="">
+                            <h5 class="slider-choice__item-title item__title">Опытные мастера</h5>
+                            <p class="slider-choice__item-text">Квалифицированные инженеры с опытом работы от 5 лет</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="brands">
+            <div class="container">
+                <h3 class="brands__title title">Ремонтируем бренды</h3>
+                <div class="brands__inner">
+                    <a class="brands__link" href="xiaomi.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/xiaomi.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="apple.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/apple.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="huawei.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/huawei.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="honor.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/honor.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="meizu.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/meizu.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="samsung.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/samsung.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="nokia.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/nokia.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="lenovo.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/lenovo.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="sony.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/sony.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="asus.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/asus.png" alt="">
+                        </div>
+                    </a>
+                </div>
+                <div class="brands__btn">
+                    <a class="brands__btn-link" href="brands.html">Смотреть все бренды</a>
+                </div>
+            </div>
+        </section>
         <section class="reviews">
             <h3 class="brands__title title">Реальные отзывы</h3>
             <div class="container">
@@ -367,63 +429,7 @@
                 </div>
             </div>
         </section>
-        <section class="brands">
-            <div class="container">
-                <h3 class="brands__title title">Ремонтируем бренды</h3>
-                <div class="brands__inner">
-                    <a class="brands__link" href="xiaomi.html">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/xiaomi.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="iphone.html">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/apple.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="huawei.html">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/huawei.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/honor.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/meizu.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="samsung.html">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/samsung.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/nokia.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/lenovo.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/sony.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/asus.png" alt="">
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </section>
+
 
 
         <!--     <section class="call-master">
@@ -553,6 +559,16 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="footer_copy">
+                    <p class="footer__copy-text">
+                        Представленные на сайте товарные знаки используются с правомерной информационной и описательной целью. iPhone, Macbook, iPad - правообладатель Apple Inc. (Эпл Инк.); Huawei и Honor - правообладатель HUAWEI TECHNOLOGIES CO., LTD. (ХУАВЕЙ ТЕКНОЛОДЖИС КО.,
+                        ЛТД.); Samsung – правообладатель Samsung Electronics Co. Ltd. (Самсунг Электроникс Ко., Лтд.); MEIZU - правообладатель MEIZU TECHNOLOGY CO., LTD.; Nokia - правообладатель Nokia Corporation (Нокиа Корпорейшн); Lenovo - правообладатель
+                        Lenovo (Beijing) Limited; Xiaomi - правообладатель Xiaomi Inc.; ZTE - правообладатель ZTE Corporation; HTC - правообладатель HTC CORPORATION (Эйч-Ти-Си КОРПОРЕЙШН); LG - правообладатель LG Corp. (ЭлДжи Корп.); Philips - правообладатель
+                        Koninklijke Philips N.V. (Конинклийке Филипс Н.В.); Sony - правообладатель Sony Corporation (Сони Корпорейшн); ASUS - правообладатель ASUSTeK Computer Inc. (Асустек Компьютер Инкорпорейшн); ACER - правообладатель Acer Incorporated
+                        (Эйсер Инкорпорейтед); DELL - правообладатель Dell Inc.(Делл Инк.); HP - правообладатель HP Hewlett-Packard Group LLC (ЭйчПи Хьюлетт Паккард Груп ЛЛК); Toshiba - правообладатель KABUSHIKI KAISHA TOSHIBA, also trading as Toshiba
+                        Corporation (КАБУШИКИ КАЙША ТОШИБА также торгующая как Тосиба Корпорейшн). Товарные знаки используется с целью описания товара, в отношении которых производятся услуги по ремонту.
+                    </p>
                 </div>
             </div>
         </footer>
