--- a/app/meizu.html
+++ b/app/meizu.html
@@ -42,10 +42,10 @@
             <div class="container">
                 <div class="breaking-page__inner">
                     <div class="breaking-page__image-inner">
-                        <img class="breaking-page__image" alt="" src="images/brands/phones/iphone.jpg">
+                        <img class="breaking-page__image" alt="" src="images/brands/phones/meizu.jpg">
                     </div>
                     <div class="breaking-page__box">
-                        <div class="breaking-page__title">Ремонт iphone в Краснодаре</div>
+                        <div class="breaking-page__title">Ремонт Meizu в Краснодаре</div>
                         <div class="breaking-page__headline">Сервисный центр "Доктор Гаджет"</div>
 
                         <div class="breaking-page__box-inner">
@@ -69,7 +69,7 @@
         </section>
         <section class="price">
             <div class="container">
-                <h3 class="slider-choice__title title">цены на ремонт Iphone </h3>
+                <h3 class="slider-choice__title title">цены на ремонт телефонов Meizu </h3>
                 <div class="price__inner">
                     <div class="price__inner-title">
                         <p class="price__item-title price__item-title--name">Наименование услуги</p>
@@ -78,109 +78,102 @@
                         <p class="price__item-title price__item-title--link">Починить</p>
                     </div>
                     <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена дисплея Iphone</p>
+                        <p class="price__item-service price__item-service--name">Диагностика Meizu</p>
                         <p class="price__item-service price__item-service--time">от 30 мин</p>
                         <p class="price__item-service price__item-service--price">Бесплатно</p>
                         <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
                     <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена стекла дисплея Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена разъёма Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена аккумулятора Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена контроллера питания Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Диагностика Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена задней крышки Iphone</p>
+                        <p class="price__item-service price__item-service--name">Замена задней крышки Meizu</p>
                         <p class="price__item-service price__item-service--time">от 30 мин</p>
                         <p class="price__item-service price__item-service--price">500</p>
                         <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
                     <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена тачскрина Iphone</p>
+                        <p class="price__item-service price__item-service--name">Замена дисплея Meizu</p>
                         <p class="price__item-service price__item-service--time">от 30 мин</p>
                         <p class="price__item-service price__item-service--price">Бесплатно</p>
                         <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
                     <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена сенсора Iphone</p>
+                        <p class="price__item-service price__item-service--name">Замена стекла дисплея Meizu</p>
                         <p class="price__item-service price__item-service--time">от 30 мин</p>
                         <p class="price__item-service price__item-service--price">Бесплатно</p>
                         <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
                     <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена динамиков Iphone</p>
+                        <p class="price__item-service price__item-service--name">Замена тачскрина Meizu</p>
                         <p class="price__item-service price__item-service--time">от 30 мин</p>
                         <p class="price__item-service price__item-service--price">Бесплатно</p>
                         <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Чистка сетки динамиков Iphone</p>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Замена сенсора Meizu</p>
                         <p class="price__item-service price__item-service--time">от 30 мин</p>
                         <p class="price__item-service price__item-service--price">Бесплатно</p>
                         <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена микрофона Iphone</p>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Замена аккумулятора Meizu</p>
                         <p class="price__item-service price__item-service--time">от 30 мин</p>
                         <p class="price__item-service price__item-service--price">Бесплатно</p>
                         <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
-
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена камеры Iphone</p>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Замена динамиков Meizu</p>
                         <p class="price__item-service price__item-service--time">от 30 мин</p>
                         <p class="price__item-service price__item-service--price">Бесплатно</p>
                         <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Ремонт кнопки включения Iphone</p>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Чистка сетки динамиков Meizu</p>
                         <p class="price__item-service price__item-service--time">от 30 мин</p>
                         <p class="price__item-service price__item-service--price">Бесплатно</p>
                         <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Ремонт кнопок громкости Iphone</p>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Замена микрофона Meizu</p>
                         <p class="price__item-service price__item-service--time">от 30 мин</p>
                         <p class="price__item-service price__item-service--price">Бесплатно</p>
                         <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
-
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Ремонт платы Iphone</p>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Замена разъёма Meizu</p>
                         <p class="price__item-service price__item-service--time">от 30 мин</p>
                         <p class="price__item-service price__item-service--price">Бесплатно</p>
                         <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена аудио-кодека Iphone</p>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Замена камеры Meizu</p>
                         <p class="price__item-service price__item-service--time">от 30 мин</p>
                         <p class="price__item-service price__item-service--price">Бесплатно</p>
                         <p class="price__item-service price__item-service--link">Починить</p>
                     </a>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Ремонт кнопки включения Meizu</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Ремонт кнопок громкости Meizu</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Замена контроллера питания Meizu</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Ремонт платы Meizu</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <!-- <button class="price__btn-load">Показать ещё</button> -->
                 </div>
             </div>
         </section>
