--- a/app/asus-laptop.html
+++ b/app/asus-laptop.html
@@ -42,10 +42,10 @@
             <div class="container">
                 <div class="breaking-page__inner">
                     <div class="breaking-page__image-inner">
-                        <img class="breaking-page__image" alt="" src="images/breaking-page/sound.jpg">
+                        <img class="breaking-page__image" alt="" src="images/brands/laptops/asus-laptop.jpg">
                     </div>
                     <div class="breaking-page__box">
-                        <div class="breaking-page__title">Ремонт динамиков в телефоне</div>
+                        <div class="breaking-page__title">Ремонт ноутбуков Asus в Краснодаре</div>
                         <div class="breaking-page__headline">Сервисный центр "Доктор Гаджет"</div>
 
                         <div class="breaking-page__box-inner">
@@ -67,8 +67,118 @@
                 </div>
             </div>
         </section>
+        <section class="price">
+            <div class="container">
+                <h3 class="slider-choice__title title">цены на ремонт ноутбуков Asus </h3>
+                <div class="price__inner">
+                    <div class="price__inner-title">
+                        <p class="price__item-title price__item-title--name">Наименование услуги</p>
+                        <p class="price__item-title price__item-title--time">Время работы</p>
+                        <p class="price__item-title price__item-title--price">Стоимость</p>
+                        <p class="price__item-title price__item-title--link">Починить</p>
+                    </div>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Диагностика Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Замена задней крышки Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">500</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Замена дисплея Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Замена стекла дисплея Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line" href="#">
+                        <p class="price__item-service price__item-service--name">Замена тачскрина Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Замена сенсора Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Замена аккумулятора Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Замена динамиков Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Чистка сетки динамиков Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Замена микрофона Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Замена разъёма Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Замена камеры Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Ремонт кнопки включения Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Ремонт кнопок громкости Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Замена контроллера питания Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <a class="price__service-line price__service-line-hide" href="#">
+                        <p class="price__item-service price__item-service--name">Ремонт платы Xiaomi</p>
+                        <p class="price__item-service price__item-service--time">от 30 мин</p>
+                        <p class="price__item-service price__item-service--price">Бесплатно</p>
+                        <p class="price__item-service price__item-service--link">Починить</p>
+                    </a>
+                    <!-- <button class="price__btn-load">Показать ещё</button> -->
+                </div>
+            </div>
+        </section>
 
-        <section class="slider-choice">
+        <!--  <section class="slider-choice">
             <div class="container-slider">
                 <h3 class="slider-choice__title title">Почему выбирают "Доктор Гаджет"</h3>
                 <div class="slider-choice__inner">
@@ -109,64 +219,8 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <section class="brands">
-            <div class="container">
-                <h3 class="brands__title title">Ремонтируем бренды</h3>
-                <div class="brands__inner">
-                    <a class="brands__link" href="xiaomi.html">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/xiaomi.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="iphone.html">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/apple.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="huawei.html">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/huawei.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/honor.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/meizu.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="samsung.html">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/samsung.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/nokia.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/lenovo.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/sony.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/asus.png" alt="">
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </section>
+        </section> -->
+
 
 
         <footer class="footer">
