--- a/app/sim.html
+++ b/app/sim.html
@@ -112,56 +112,56 @@
         </section>
         <section class="brands">
             <div class="container">
-                <h3 class="brands__title title">Выберите бренд</h3>
+                <h3 class="brands__title title">Ремонтируем бренды</h3>
                 <div class="brands__inner">
-                    <a class="brands__link" href="#">
+                    <a class="brands__link" href="xiaomi.html">
                         <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/xiaomi.png" alt="">
+                            <img class="brands__icon" src="images/brands/logo/xiaomi.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="iphone.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/apple.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="huawei.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/huawei.png" alt="">
                         </div>
                     </a>
                     <a class="brands__link" href="#">
                         <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/apple.png" alt="">
+                            <img class="brands__icon" src="images/brands/logo/honor.png" alt="">
                         </div>
                     </a>
                     <a class="brands__link" href="#">
                         <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/huawei.png" alt="">
+                            <img class="brands__icon" src="images/brands/logo/meizu.png" alt="">
+                        </div>
+                    </a>
+                    <a class="brands__link" href="samsung.html">
+                        <div class="brands__item">
+                            <img class="brands__icon" src="images/brands/logo/samsung.png" alt="">
                         </div>
                     </a>
                     <a class="brands__link" href="#">
                         <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/honor.png" alt="">
+                            <img class="brands__icon" src="images/brands/logo/nokia.png" alt="">
                         </div>
                     </a>
                     <a class="brands__link" href="#">
                         <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/meizu.png" alt="">
+                            <img class="brands__icon" src="images/brands/logo/lenovo.png" alt="">
                         </div>
                     </a>
                     <a class="brands__link" href="#">
                         <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/samsung.png" alt="">
+                            <img class="brands__icon" src="images/brands/logo/sony.png" alt="">
                         </div>
                     </a>
                     <a class="brands__link" href="#">
                         <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/nokia.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/lenovo.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/sony.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="#">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/asus.png" alt="">
+                            <img class="brands__icon" src="images/brands/logo/asus.png" alt="">
                         </div>
                     </a>
                 </div>
